# dragonbotz

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/commands/: box.rs  inventory.rs  mod.rs  start.rs  summon.rs  test.rs
src/core/: bot.rs  command.rs  database.rs  mod.rs
src/data/: mod.rs
src/data/migrations/: init_tables.sql  populate.sql
src/data/models/: banner_content_model.rs  banner_model.rs  character_model.rs  mod.rs  player_model.rs  player_resource_model.rs  unique_character_model.rs
src/data/repository/: banner_content_repository.rs  banner_repository.rs  character_repository.rs  mod.rs  player_repository.rs  player_resource_repository.rs  unique_character_repository.rs
src/utils/: check.rs  colors.rs  cost.rs  data.rs  droprate.rs  error.rs  icons.rs  items.rs  mod.rs  rarity.rs  reward.rs  unique_id.rs  utils.rs
