[package]
name = "dragonbotz"
version = "3.0.0"
edition = "2021"
authors = ["Lahcène Belhadi <lahcene.belhadi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "collector"]

[dependencies.tokio]
version = "1.19"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4"]

[dependencies.chrono]
version = "0.4"

[dependencies.rand]
version = "0.8"
